--- a/labworkWebApp/Views/Game/Add.cshtml
+++ b/labworkWebApp/Views/Game/Add.cshtml
@@ -1,33 +1,34 @@
-﻿
+﻿@model GameAddDto
 @{
 
 }
-
-
+<div class="text-center">
+    <h1 class="display-4">Добавление игры</h1>
+<div asp-validation-summary="All" class="alert-danger text-start"></div>
 <form action="/Game/Add" method="post">
     <div class="mb-3">
         <label for="Name">Название</label>
-        <input type="text" name="Name" id="Name" class="form-control" />
+            <input type="text" name="Name" value="@Model?.Name" class="form-control" required />
     </div>
     <div class="mb-3">
          <label for="Developer"> Разработчик </label>
-         <input type="text" name="Developer" id="Developer" class="form-control" />
+            <input type="text" name="Developer" value="@Model?.Developer" class="form-control" required />
     </div>
     <div class="mb-3">
         <label for="Publisher"> Издатель </label>
-        <input type="text" name="Publisher" id="Publisher" class="form-control" />
+            <input type="text" name="Publisher" value="@Model?.Publisher" class="form-control" />
     </div>
     <div class="mb-3">
         <label for="Category"> Категория </label>
-        <input type="text" name="Category" id="Category" class="form-control" />
+            <input type="text" name="Category" value="@Model?.Category" class="form-control" />
     </div>
     <div class="mb-3">
         <label for="Access"> Ключ доступа </label>
-        <input type="text" name="Access" id="Access" class="form-control" />
+            <input type="text" name="Access" class="form-control" required />
     </div>
     <div class="mb-3">
         <label for="GenreId"> Жанр </label>
-        <input type="text" name="GenreId" id="GenreId" class="form-control" />
+            <input type="text" name="GenreId" value="@Model?.GenreId" class="form-control" required />
     </div>
     <button type="submit" class="btn btn-primary"> Сохранить </button>
 </form>
