--- a/labworkWebApp/Views/Game/Index.cshtml
+++ b/labworkWebApp/Views/Game/Index.cshtml
@@ -1,10 +1,33 @@
-﻿@model List<GameDto>
+﻿@model labworkWebApp.Models.GameViewModel.GameViewModel
 @{
     ViewData["Title"] = "Главная страница";
     var i = 1;
 }
 
 <a href="/Game/Add">Добавить игру</a>
+
+<form action="/Game/" method="post" class="row row-cols-lg-auto g-3 align-items-center mt-3">
+    <div>
+        <input type="text" name="Name" placeholder="Название" class="form-control" />
+    </div>
+    <div>
+        <input type="text" name="Developer" placeholder="Разработчик" class="form-control" />
+    </div>
+    <div>
+        <input type="text" name="Publisher" placeholder="Издатель" class="form-control" />
+    </div>
+    <div>
+        <select name="GenreId" class="form-control">
+            <option value="">Любой жанр</option>
+            @foreach (var item in @Model.Genres)
+            {
+                <option value="@item.Id">@item.Name</option>
+            }
+        </select>
+    </div>
+    <button type="submit" class="btn btn-primary"> Найти </button>
+</form>
+
 <div class="text-center">
     <h1 class="display-4">Полный список игр</h1>
     @if (!string.IsNullOrEmpty(TempData["Message"]?.ToString()))
@@ -20,7 +43,7 @@
             <td>Разработка/Публикация</td>
             <td>Жанр</td>
         </tr>
-        @foreach(var game in Model)
+        @foreach(var game in Model.Games)
         {
             <tr>
                 <td>@game.Id</td>
